Stereo Parallel vs. Off-Axis #45234

Closed
opened 2015-06-29 11:49:16 +02:00 by Philipp · 7 comments

System Information
Linux Ubuntu

Blender Version
Blender 2.75 RC2 and Master branch

Short description of error
Stereo rendering with camera set to parallel vs off-axis does not make a difference.
Camera coverges even in parallel although hint says "Parallel cameras with no convergence"

Exact steps for others to reproduce the error
Starting from standard scene:

  • Go to "Layers", turn on Views -> Stereo 3D
  • Select camera, go to camera setting
  • Select "Stereoscopy->Parallel"
  • Set "Viewport convergence" to low value and render
  • Set "Viewport convergence" to high value and render
  • The output changes although in parallel mode the convergence should not matter.

**System Information** Linux Ubuntu **Blender Version** Blender 2.75 RC2 and Master branch **Short description of error** Stereo rendering with camera set to parallel vs off-axis does not make a difference. Camera coverges even in parallel although hint says "Parallel cameras with no convergence" **Exact steps for others to reproduce the error** Starting from standard scene: - Go to "Layers", turn on Views -> Stereo 3D - Select camera, go to camera setting - Select "Stereoscopy->Parallel" - Set "Viewport convergence" to low value and render - Set "Viewport convergence" to high value and render - > The output changes although in parallel mode the convergence should not matter.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @fischer

Added subscriber: @fischer
Author

I think I found the bug. But I am not an official Blender developer. So someone should check and apply this:

In 'source/blender/blenkernel/intern/camera.c'
there is:

if (ELEM(convergence_mode, CAM_S3D_OFFAXIS, CAM_S3D_PARALLEL)) {

And I think CAM_S3D_PARALLEL is wrong here and should go away.
Although the comment above this line says "in viewport, parallel renders as offaxis, but in render it does parallel",
this does not happen, the shift that is set here, also applies to rendering, anyway I don't see why parallel should show as off-axis
(which it doesn't at the moment, so that's fine)

Best,
Phil

I think I found the bug. But I am not an official Blender developer. So someone should check and apply this: In 'source/blender/blenkernel/intern/camera.c' there is: ``` if (ELEM(convergence_mode, CAM_S3D_OFFAXIS, CAM_S3D_PARALLEL)) { ``` And I think CAM_S3D_PARALLEL is wrong here and should go away. Although the comment above this line says "in viewport, parallel renders as offaxis, but in render it does parallel", this does not happen, the shift that is set here, also applies to rendering, anyway I don't see why parallel should show as off-axis (which it doesn't at the moment, so that's fine) Best, Phil
Dalai Felinto was assigned by Bastien Montagne 2015-06-29 14:13:16 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 3d12d4b94f

This issue was referenced by 3d12d4b94f9bff6ea810179e22a5e3e018541f31

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 6450d89592

This issue was referenced by 6450d89592eaa933fcbad84b9051cb4db7e40fa6
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45234
No description provided.